src/test/ui/associated-consts/assoc-const.stderr
error[E0658]: associated const equality is incomplete
  --> $DIR/assoc-const.rs:14:15
   |
LL | fn foo<F: Foo<N=3>>() {}
   |               ^^^
   |
   = note: see issue #92827 <https://github.com/rust-lang/rust/issues/92827> for more information
   = help: add `#![feature(associated_const_equality)]` to the crate attributes to enable

error[E0658]: associated const equality is incomplete
  --> $DIR/assoc-const.rs:17:15
   |
LL | fn bar<F: Foo<N={TEST}>>() {}
   |               ^^^^^^^^
   |
   = note: see issue #92827 <https://github.com/rust-lang/rust/issues/92827> for more information
   = help: add `#![feature(associated_const_equality)]` to the crate attributes to enable

error: associated const equality is incomplete
  --> $DIR/assoc-const.rs:14:15
   |
LL | fn foo<F: Foo<N=3>>() {}
   |               ^^^ cannot yet relate associated const

error: associated const equality is incomplete
  --> $DIR/assoc-const.rs:17:15
   |
LL | fn bar<F: Foo<N={TEST}>>() {}
   |               ^^^^^^^^ cannot yet relate associated const

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0658`.
